; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ali5451/extr_ali5451.c_snd_ali_enable_spdif_in.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ali5451/extr_ali5451.c_snd_ali_enable_spdif_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ali = type { i32 }

@ALI_GLOBAL_CONTROL = common dso_local global i32 0, align 4
@ALI_SPDIF_IN_SUPPORT = common dso_local global i32 0, align 4
@ALI_SPDIF_CTRL = common dso_local global i32 0, align 4
@ALI_SPDIF_IN_CHANNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ali*)* @snd_ali_enable_spdif_in to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_ali_enable_spdif_in(%struct.snd_ali* %0) #0 {
  %2 = alloca %struct.snd_ali*, align 8
  %3 = alloca i32, align 4
  store %struct.snd_ali* %0, %struct.snd_ali** %2, align 8
  %4 = load %struct.snd_ali*, %struct.snd_ali** %2, align 8
  %5 = load i32, i32* @ALI_GLOBAL_CONTROL, align 4
  %6 = call i32 @ALI_REG(%struct.snd_ali* %4, i32 %5)
  %7 = call i32 @inl(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @ALI_SPDIF_IN_SUPPORT, align 4
  %9 = load i32, i32* %3, align 4
  %10 = or i32 %9, %8
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.snd_ali*, %struct.snd_ali** %2, align 8
  %13 = load i32, i32* @ALI_GLOBAL_CONTROL, align 4
  %14 = call i32 @ALI_REG(%struct.snd_ali* %12, i32 %13)
  %15 = call i32 @outl(i32 %11, i32 %14)
  %16 = load %struct.snd_ali*, %struct.snd_ali** %2, align 8
  %17 = load i32, i32* @ALI_SPDIF_CTRL, align 4
  %18 = call i32 @ALI_REG(%struct.snd_ali* %16, i32 %17)
  %19 = call i32 @inb(i32 %18)
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %3, align 4
  %21 = or i32 %20, 2
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load %struct.snd_ali*, %struct.snd_ali** %2, align 8
  %24 = load i32, i32* @ALI_SPDIF_CTRL, align 4
  %25 = call i32 @ALI_REG(%struct.snd_ali* %23, i32 %24)
  %26 = call i32 @outb(i32 %22, i32 %25)
  %27 = load %struct.snd_ali*, %struct.snd_ali** %2, align 8
  %28 = load i32, i32* @ALI_SPDIF_IN_CHANNEL, align 4
  %29 = call i32 @snd_ali_enable_special_channel(%struct.snd_ali* %27, i32 %28)
  ret void
}

declare dso_local i32 @inl(i32) #1

declare dso_local i32 @ALI_REG(%struct.snd_ali*, i32) #1

declare dso_local i32 @outl(i32, i32) #1

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @snd_ali_enable_special_channel(%struct.snd_ali*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
